--- a/front_end/assets/bulma.css
+++ b/front_end/assets/bulma.css
@@ -673,6 +673,14 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   padding: 1.25rem;
 }
 
+.comment {
+  background-color: red;
+  border-radius: 5px;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  display: block;
+  padding: 1.25rem;
+}
+
 .box:not(:last-child) {
   margin-bottom: 1.5rem;
 }
@@ -1681,6 +1689,10 @@ input[type="submit"].button {
 
 .content {
   color: #4a4a4a;
+}
+
+.comment_content {
+  background-color: red;
 }
 
 .content:not(:last-child) {
