added color scheme for card ui and formatted comment cards

--- a/front_end/assets/bulma.css
+++ b/front_end/assets/bulma.css
@@ -1695,6 +1695,7 @@ input[type="submit"].button {
   margin-bottom: 12px;
   color: white;
   background-color: #fa8072;
+  border-bottom: white, thin;
 }
 
 .content:not(:last-child) {
